--- a/routes/company_owners/form.html
+++ b/routes/company_owners/form.html
@@ -1,9 +1,14 @@
 <html>
   <body>
-    <form action="http://127.0.0.1:5000/user_registration" method="POST">
-      Name: <input type="text" name="Name" /> <br />
-      Email: <input type="text" name="Email" /> <br />
-      Password: <input type="password" name="Password" />
+    <form action="http://127.0.0.1:5000/system_admin_registration" method="POST">
+      AdminFirstName: <input type="text" name="AdminFirstName" /> <br />
+      AdminMiddleName: <input type="text" name="AdminMiddleName" /> <br />
+      AdminSurname: <input type="text" name="AdminSurname" /> <br />
+      AdminPhoneNumber: <input type="text" name="AdminPhoneNumber" /> <br />
+      AdminEmail: <input type="text" name="AdminEmail" /> <br />
+      GenderId: <input type="text" name="GenderId" /> <br />
+      AdminNationalId: <input type="text" name="AdminNationalId" /> <br />
+      AdminPassword: <input type="password" name="AdminPassword" />
       <input type="submit" value="Submit" />
     </form>
   </body>
