--- a/routes/company_owners/form.html
+++ b/routes/company_owners/form.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<form action="http://backend.kopa.icube.ga/system_admin_registration" method="POST">
+<form action="http://104.197.5.158:80/system_admin_registration" method="POST">
   AdminFirstName: <input type="text" name="AdminFirstName" /> <br />
   AdminMiddleName: <input type="text" name="AdminMiddleName" /> <br />
   AdminSurname: <input type="text" name="AdminSurname" /> <br />
