--- a/routes/system_admin/AdminRegistration.html
+++ b/routes/system_admin/AdminRegistration.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<form action="http://backend.waondo.agweria.com/system_admin_registration" method="POST">
+<form action="http://backend.kopa.kopa.xyz/system_admin_registration" method="POST">
     AdminFirstName: <input type="text" name="AdminFirstName" /> <br />
     AdminMiddleName: <input type="text" name="AdminMiddleName" /> <br />
     AdminSurname: <input type="text" name="AdminSurname" /> <br />
